Fix Google Maps iframe embed URL

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 <body>
   <iframe 
-    src="https://www.google.com/maps/d/u/0/embed?mid=https://www.google.com/maps/d/u/0/embed?mid=1jrmjZKc0bGdNGw4CY8IpE06iMjQ9SHw">
+    src="https://www.google.com/maps/d/embed?mid=1jrmjZKc0bGdNGw4CY8IpE06iMjQ9SHw&ehbc=2E312F">
   </iframe>
 </body>
 </html>
